force-app/main/default/objects/Opportunity/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <label>Forecast Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>