force-app/main/default/objects/Opportunity/fields/Weighted_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Forecast__c</fullName>
    <label>Weighted Forecast</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>