force-app/main/default/objects/Opportunity/validationRules/Require_Amount_For_High_Probability.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Amount_For_High_Probability</fullName>
    <active>true</active>
    <description>Requires Amount for opportunities with probability >= 50%</description>
    <errorConditionFormula>AND(
    ISBLANK(Amount),
    Probability &gt;= 50,
    NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)),
    NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;))
)</errorConditionFormula>
    <errorMessage>Amount is required for opportunities in Proposal, Negotiation, or later stages.</errorMessage>
    <errorDisplayField>Amount</errorDisplayField>
</ValidationRule>