force-app/main/default/objects/Opportunity/validationRules/Require_Close_Date_For_Open_Opportunities.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Close_Date_For_Open_Opportunities</fullName>
    <active>true</active>
    <description>Requires Close Date for all open opportunities</description>
    <errorConditionFormula>AND(
    ISBLANK(CloseDate),
    NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)),
    NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;))
)</errorConditionFormula>
    <errorMessage>Close Date is required for open opportunities.</errorMessage>
    <errorDisplayField>CloseDate</errorDisplayField>
</ValidationRule>